--- a/contacts.html
+++ b/contacts.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="row align-items-center">
                  <div class="col-6">
-                        <a href="index-6.html" class="logo_normal"><img src="img/twologo-removebg-preview.png" width="135" height="80" alt=""></a>
+                        <a href="index.html" class="logo_normal"><img src="img/twologo-removebg-preview.png" width="135" height="80" alt=""></a>
                 </div>
                 <div class="col-6">
                     <nav>
@@ -67,7 +67,7 @@
         <div class="sidebar-navigation">
             <nav>
                <ul class="level-1">
-                    <li><a href="index-6.html">Home</a>
+                    <li><a href="index.html">Home</a>
                          <!--
                         <ul class="level-2">
                         <li class="back"><a href="#0">Back</a></li>
@@ -322,7 +322,7 @@
                 <div class="col-lg-2 col-md-6">
                     <h5 class="footer-title">Explore</h5>
                     <ul class="footer-links">
-                        <li><i class="bi bi-house-door me-2"></i><a href="index-6.html" class="footer-link">Home</a></li>
+                        <li><i class="bi bi-house-door me-2"></i><a href="index.html" class="footer-link">Home</a></li>
                         <li><i class="bi bi-info-circle me-2"></i><a href="about.html" class="footer-link">About Us</a></li>
                         <li><i class="bi bi-door-open me-2"></i><a href="room-list-2.html" class="footer-link">Rooms</a></li>
                         <li><i class="bi bi-newspaper me-2"></i><a href="restaurant.html" class="footer-link">Amenities & Adventures</a></li>
